Feat: add cartItems generated Swagger
